<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_no"/>
    <Button
        android:id="@+id/myAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:onClick="onClickAdd"/>
    <Button
        android:id="@+id/mySubtractButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_subtract"
        android:onClick="onClickSubtract"/>
    <Button
        android:id="@+id/myMultiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        android:onClick="onClickMultiply"/>
    <Button
        android:id="@+id/myDivideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_divide"
        android:onClick="onClickDivide"/>
</LinearLayout>